[tool.poetry]
name = "demo-python-fastapi-oauth"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_fastapi_oauth"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
